-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.2, 5.4.0
-
windows runtime x64, windows phone 8.1 arm
-
-
2c00943
In WinRT 8.1 and Windows Phone 8.1 applications squares are displayed instead of the cyrillic alphabet when loading a font from a file.
| For Gerrit Dashboard: QTBUG-44155 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 111624,4 | winrt: properly retrieve font writing systems from unicode ranges | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |